<resources>
    <string name="app_name">yChat</string>

    <string name="title_activity_login">Login</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LogIn</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_wire">Wire</string>
    <string name="title_ychat">ychat</string>
    <string name="title_clique">Clique</string>
    <string name="title_more">More</string>
    <string name="prompt_Name">Username</string>
    <string name="prompt_confirmpassword">Confirm Password</string>
    <string name="action_sign_up">Register</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="send_to">Sendig....</string>
    <string name="prompt_firstname">FirstName</string>
    <string name="prompt_lastname">LastName</string>
    <string name="title_activity_setting">Setting</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="empty" translatable="false" />
    <string name="insert_url">Insert a text containing an url</string>
    <string name="restart">Restart</string>
    <string name="about">About</string>
    <string name="preview_area">Preview Area</string>
    <string name="post_area">Post Area</string>
    <string name="no_urls">No urls has been found</string>
    <string name="failed_preview">Preview failed.\nClick to dismiss.</string>
    <string name="submit">Submit</string>
    <string name="random">Random</string>
    <string name="post">Post</string>
    <string name="previous">←</string>
    <string name="forward">→</string>
    <string name="choose_thumbnail">Choose a thumbnail</string>
    <string name="no_thumbnail">No thumbnail</string>
    <string name="enter_title">Enter a title</string>
    <string name="enter_description">Enter a description</string>
    <string name="of">of</string>
    <string name="title_activity_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="turn_speaker_on">Speaker ON</string>
    <string name="callee">client identity or phone number</string>
    <string name="callHint">Dial a client name or phone number. Leaving the field empty results in an automated response.</string>
    <string name="confirmation">Confirmation</string>
    <string name="enter_otp_msg">Please enter verification code\nfrom the sms we just sent you</string>
    <string name="confirm">Confirm</string>
</resources>
