<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".activitys.Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:paddingTop="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:orientation="vertical">


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_ychat" />


            <EditText
                android:id="@+id/etname"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/prompt_Name"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="12dp"
                android:singleLine="true"
                android:textColor="#7A7A7A"
                android:textColorHint="#534F4F"
                app:backgroundTint="#454141" />


            <EditText
                android:id="@+id/etemail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="12dp"
                android:singleLine="true"
                android:textColor="#7A7A7A"
                android:layout_marginTop="8dp"
                android:textColorHint="#534F4F"
                app:backgroundTint="#454141" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/prompt_password"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="12dp"
                android:singleLine="true"
                android:textColor="#7A7A7A"
                android:layout_marginTop="8dp"
                android:textColorHint="#534F4F"
                app:backgroundTint="#454141" />


            <EditText
                android:id="@+id/etCPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/prompt_confirmpassword"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="12dp"
                android:singleLine="true"
                android:layout_marginTop="8dp"
                android:textColor="#7A7A7A"
                android:textColorHint="#534F4F"
                app:backgroundTint="#454141" />

            <Button
                android:id="@+id/btnreg"
                style="?android:textAppearanceSmall"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_roundedcorner"
                android:text="@string/action_sign_up"
                android:layout_gravity="center"
                android:textColor="#fff"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@drawable/line"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_fb1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_twitter_logo" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_google" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/loginscr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Already have an account?" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  Login?"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
